# DistRender

./: .gitignore  CAMERA_INTEGRATION.md  Cargo.toml  OPTIMIZATIONS.md  README.md  README_CAMERA.md  REFACTORING_COMPLETED.md  REFACTORING_PLAN.md  build.rs  config.toml  scene.toml
docs/: COMPONENT_SYSTEM.md
examples/: event_system_demo.rs  load_obj.rs
src/: lib.rs  main.rs  main.rs.bak
src/component/: camera.rs  component.rs  game_object.rs  light.rs  mod.rs  transform.rs
src/core/: config.rs  error.rs  event.rs  input.rs  log.rs  mod.rs  runtime.rs  scene.rs
src/core/math/: mod.rs
src/geometry/: math_utils.rs  mesh.rs  mod.rs  vertex.rs
src/geometry/loaders/: fbx_loader.rs  mod.rs  obj_loader.rs
src/gfx/: backend.rs  dx12.rs  mod.rs  vulkan.rs  vulkan_backend.rs
src/gfx/dx12/: backend.rs  context.rs  descriptor.rs  mod.rs  renderer.rs
src/gfx/metal/: backend.rs  context.rs  mod.rs  renderer.rs
src/gfx/metal/shaders/: shader.metal
src/gfx/vulkan/: backend.rs  context.rs  descriptor.rs  mod.rs  renderer.rs  shaders.rs
src/gfx/vulkan/shaders/: fragment.glsl
src/gfx/wgpu/: backend.rs  context.rs  mod.rs  renderer.rs
src/gfx/wgpu/shaders/: shader.wgsl
src/gui/: external.rs  ipc.rs  manager.rs  metrics.rs  mod.rs  state.rs
src/gui/panels/: backend.rs  mod.rs  performance.rs  rendering.rs  scene.rs
src/math/: geometry.rs  mod.rs
src/renderer/: backend_trait.rs  dx12.rs  mod.rs  resource.rs  shaders.rs  sync.rs  vertex.rs  vulkan.rs
src/renderer/commands/: command.rs  mod.rs  sync.rs
src/renderer/resources/: descriptor.rs  mod.rs  resource.rs  vertex.rs
src/renderer/shaders/: fragment.glsl  fragment.hlsl  shader.hlsl  vertex.glsl  vertex.hlsl
src/renderer/shaders/spirv_code/: fragment.hlsl.spv  vertex.hlsl.spv
