[package]
name = "RustroverProjects"
version = "0.1.0"
edition = "2024"

[dependencies]

# Vulkan + windowing + image loading
vulkano = "0.32"
vulkano-shaders = "0.32"
vulkano-win = "0.32"
winit = "0.27"
image = "0.24"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security"] }

