[package]
name = "dist_render"
version = "0.1.0"
edition = "2021"
authors = ["DistRender Team"]
description = "A multi-backend rendering engine supporting Vulkan and DirectX 12"

[dependencies]

# Vulkan + windowing + image loading
vulkano = "0.32"
vulkano-shaders = "0.32"
vulkano-win = "0.32"
winit = "0.27"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security"] }

# Core 模块依赖
# 数学库
nalgebra = "0.33"

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"  # 日志文件输出支持

# 配置管理
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 错误处理
anyhow = "1.0"

# 几何加载器
tobj = "4.0"  # OBJ 文件加载（tinyobjloader Rust 移植）
# russimp = "2.0"  # Assimp Rust 绑定（支持 FBX 等格式）- Phase 4 将添加

# wgpu 后端依赖
wgpu = "0.17"          # wgpu 核心库（与 winit 0.27 兼容）
pollster = "0.3"       # 用于 wgpu 异步初始化的同步执行

