[package]
name = "dist_render"
version = "0.1.0"
edition = "2021"
authors = ["DistRender Team"]
description = "A multi-backend rendering engine supporting Vulkan and DirectX 12"
default-run = "dist_render"

[dependencies]

# Vulkan + windowing + image loading
vulkano = "0.34"
vulkano-shaders = "0.34"
vulkano-win = "0.34"
ash = "0.37"
raw-window-handle = "0.6"
winit = "0.29"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D_Fxc", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
objc = "0.2.7"
cocoa = "0.25.0"
block = "0.1.6"
core-graphics-types = "0.1"

[dependencies.nalgebra]
version = "0.33"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "fmt"]

[dependencies.tracing-appender]
version = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.8"

[dependencies.anyhow]
version = "1.0"

[dependencies.tobj]
version = "4.0"

[dependencies.wgpu]
version = "0.19"

[dependencies.pollster]
version = "0.3"

[dependencies.egui]
version = "0.26"

[dependencies.egui-wgpu]
version = "0.26"

[dependencies.egui-winit]
version = "0.26"

[dependencies.shared_memory]
version = "0.12"
